--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -438,8 +438,8 @@ The three \textbf{main contributions} of this paper are:
 	\item We explain why reasoning is beneficial for validation and how reasoning interacts with validation
 	%\item We describe how to recommend constraint languages according to expressivity, complexity, and user-friendliness
 	%\item We explain how to get to lower expressivity and complexity classes for particular validation scenarios 
-	\item We classify constraints according to reasoning (w and w/o) and complexity
-  \item We classify constraint languages according to expressivity ( w and w/o reasoning) and complexity
+	\item We classify constraints according to reasoning and complexity
+  \item We classify constraint languages according to expressivity
   %\item We investigate the effects on complexity expressing each constraint
 	%\item We show that OWL 2 QL together with additional constraint languages completely satisfy all RDF validation requirements.
 	%\item We evaluated to which extend the five possible standard constraint languages fulfill each requirement.
