--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -276,10 +276,10 @@ However, OWL is high-level  expressive  language with a compact human-readable s
 In practice, OWL is well-spread and RDFS/OWL constructs is widely used to tell people and applications about how valid instances should be created.
 RDF documents follow the structure of RDFS/OWL ontologies which can therefore be reused for validation.
 
-Despite the huge diversity to formulate constraints and validate them on RDF data, most of the constraint languages require a major shortcoming of redundancy. For example, consider the statement with an existential restriction \ms{Jedi $\sqsubseteq \exists$}\ms{hasJediWaepon.JediWeapon}  that says every Jedi has at least one Jedi weapon. Furthermore, we know that Luke is a Jedi (i.e., \ms{Jedi(Luke)}) having a blue laser sword (\ms{hasLaserSword(Luke, BlueLaserSword)}. Since classical constraint languages are based on the closed-world assumption (CWA) %\er{"All constraint languages" has been changed to "classical" because notice that if we call OWL   a constraint language, statement does not hold.}, if a blue laser sword is not explicitly defined to be a Jedi weapon (\ms{JediWeapon(BlueLaserSword)}), the existential restriction causes a constraint violation.
+Despite the huge diversity to formulate constraints and validate them on RDF data, most of the constraint languages require a major shortcoming of redundancy. For example, consider the statement with an existential restriction \ms{Jedi $\sqsubseteq \exists$}\ms{hasJediWaepon.JediWeapon}  that says every Jedi has at least one Jedi weapon. Furthermore, we know that Luke is a Jedi (i.e., \ms{Jedi(Luke)}) having a blue laser sword (\ms{hasLaserSword(Luke, BlueLaserSword)}. Since classical constraint languages are based on the closed-world assumption (CWA) 
+%\er{"All constraint languages" has been changed to "classical" because notice that if we call OWL   a constraint language, statement does not hold.}, if a blue laser sword is not explicitly defined to be a Jedi weapon (\ms{JediWeapon(BlueLaserSword)}), the existential restriction causes a constraint violation.
 
 If we express the mentioned constraints in OWL %\er{\tiny \vspace{0.2cm}  But we already did in former paragraph via DL not OWL which would also confuse the reader, we can instead reformulate it here for the first time in OWL or DL,  or in former paragraph in parentheses "in DL:"}
-
 and apply a reasoner before the proper constraint validation is performed, we will not get a constraint violation because implicit statements like a blue laser sword is a Jedi weapon  (which corresponds to DL statement \ms{JediWeapon(BlueLaserSword)}) will be inferred. This is due to OWL's semantic basis; open-world assumption (OWA)  i.e., a statement cannot be inferred to be false if it cannot be proved to be true  which fits its primary design purpose: to represent knowledge on World Wide Web. With its open-world semantics, used as a constraint language, OWL seems to solve the redundancy problem.  However, on closer consideration, for many constraints as well as RDF validation scenarios which demands CWA, it can result inconvenience. 
 %At a first glance, using OWL as a constraint language, the shortcoming of redundancy is solved. However, on closer consideration, OWL is by default an insufficient choice because OWL is in contrast based on the open-world assumption (OWA), i.e. a statement cannot be inferred to be false on the basis of failures to prove it. 
 %This semantics is suitable for the distributed knowledge representation scenarios on the Semantic Web, 
@@ -384,20 +384,20 @@ In case of the OWA, we infer that $\ms{Anakin}$ has a father that is a $\ms{Pers
 	%\item there is no query rewriting mechanism for OWL 2, just for OWL 2 QL
 %\end{itemize}
 
-In this paper, we investigate the expressivity, the complexity, and the user-friendliness of the five most promising constraint languages.
+In this paper, we explain why reasoning is beneficial for validation and how reasoning interacts with validation (\textbf{contribution 1}).
+We classify RDF constraints according to reasoning and complexity (\textbf{contribution 2}).
+We also investigate the expressivity of the five most promising constraint languages (\textbf{contribution 3}).
 We take OWL 2 reasoning into account as a possible pre-validation step leading to higher complexity.
 In case of reasoning, users of validation tools can define which axioms they want to use for inference rules.
-The validator is then able to determine the complexity class, to show which axioms lead to a higher complexity class, and to recommend how to get to a lower complexity class.
+The validator is then able to determine the complexity class, to show which axioms lead to a higher complexity class, and to recommend how to get to a lower one.
 When reasoning is not needed for validation, axioms can be reformulated as constraints in queries leading to a lower complexity class. 
 Such a complexity aware validator could help people writing constraints that can be efficiently computed.
 %For DL, there is a web application allowing to select the needed DL constructs in order to determine the complexity of DL reasoning\footnote{\url{http://www.cs.man.ac.uk/~ezolin/dl/}}.
 
-When stating axioms and constraints (without reasoning capabilities) needed for validation, 
-the validator is able to determine the expressivity class and thus can recommend constraint languages which can be used to express the wished axioms/constraints. 
-Although, there is a partial ordering of constraint languages for particular expressivity classes, 
-validators may not recommend the constraint language with the highest expressivity of that specific expressivity class.
-The validator compares the constraint languages, which are able to express the needed axioms/constraints, according to multiple user-friendliness classes. 
-As a consequence, the validator may recommend to express the stated axioms/constraints by a constraint language which is less but enough expressive, and more user-friendly.
+When stating axioms and constraints (without reasoning capabilities), 
+the validator is able to determine the needed expressivity and thus can recommend constraint languages which can be used to express the wished axioms/constraints. 
+Although, there is an ordering of constraint languages for particular expressivity scores and classes, 
+validators may not recommend the constraint language with the highest expressivity as further criteria may be evaluated such as user-friendliness.
 
 %As case studies are linked to use cases and use cases to requirements, it is known how complex the task is to fulfill use cases and case studies.
 %For specific use cases, it can also be determined which of the associated requirements lead to a higher complexity class.
@@ -418,32 +418,32 @@ As a consequence, the validator may recommend to express the stated axioms/const
 %If we want to use OWL 2 for RDF validation, we have to ensure that as many requirements for formulating RDF constraints are fulfilled
 %and that the computational complexity to formulate these constraints is satisfying.  
 
-This paper serves to answer the two \textbf{research questions}:
-\begin{itemize}
+%This paper serves to answer the two \textbf{research questions}:
+%\begin{itemize}
 	%\item Which constraints are expressible by DL and which are only expressible by a query language (e.g Datalog or SPARQL)?
 	%\item For which requirements formulating constraints the expressivity of \textit{DL-Lite}$_\mathcal{A}$ (respectively OWL 2 QL) is sufficient
 	%and for which requirements additional constraint languages are needed?
 	%\item For which constraints a priori reasoning makes sense and how does reasoning affect their validation?  
 	%\item What are the effects on complexity to express these constraints with and without OWL 2 QL and OWL 2 DL reasoning?
 	%\item What are the effects on complexity of constraints not expressible by DL but by a query language?
-	\item How does reasoning affect the complexity of constraints and constraint languages?
-	\item How to classify constraints and constraint languages according to expressivity and complexity?
-\end{itemize}
+	%\item How does reasoning affect the complexity of constraints and constraint languages?
+	%\item How to classify constraints and constraint languages according to expressivity and complexity?
+%\end{itemize}
 %\tb{research question also in flow text / like this: ... (research question: How does reasoning affect the complexity of constraints and constraint languages?) }
 
-The three \textbf{main contributions} of this paper are:
-\begin{itemize}
+%The three \textbf{main contributions} of this paper are:
+%\begin{itemize}
   %\item We explain why OWL can be used as constraint language
 	%\item We show that OWL 2 can be used as a high-level, very expressive, intuitive, and concise constraint language
-	\item We explain why reasoning is beneficial for validation and how reasoning interacts with validation
+	%\item We explain why reasoning is beneficial for validation and how reasoning interacts with validation
 	%\item We describe how to recommend constraint languages according to expressivity, complexity, and user-friendliness
 	%\item We explain how to get to lower expressivity and complexity classes for particular validation scenarios 
-	\item We classify constraints according to reasoning and complexity
-  \item We classify constraint languages according to expressivity
+	%\item We classify constraints according to reasoning and complexity
+  %\item We classify constraint languages according to expressivity
   %\item We investigate the effects on complexity expressing each constraint
 	%\item We show that OWL 2 QL together with additional constraint languages completely satisfy all RDF validation requirements.
 	%\item We evaluated to which extend the five possible standard constraint languages fulfill each requirement.
-\end{itemize}
+%\end{itemize}
 %\tb{+1 / this should be the 3 main contributions, maybe we should highlight them in the flow text / no itemization}
 %\er{We can reserve a paragraph (flowing text) for those  item as well. }
 
