--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -276,9 +276,9 @@ However, OWL is high-level  expressive  language with a compact human-readable s
 In practice, OWL is well-spread and RDFS/OWL constructs is widely used to tell people and applications about how valid instances should be created.
 RDF documents follow the structure of RDFS/OWL ontologies which can therefore be reused for validation.
 
-Despite the huge diversity to formulate constraints and validate them on RDF data, most of the constraint languages require a major shortcoming of redundancy. For example, consider the statement with an existential restriction \ms{Jedi $\sqsubseteq \exists$}\ms{hasJediWaepon.JediWeapon}  that says every Jedi has at least one Jedi weapon. Furthermore, we know that Luke is a Jedi (i.e., \ms{Jedi(Luke)}) having a blue laser sword (\ms{hasLaserSword(Luke, BlueLaserSword)}. Since classical constraint languages are based on the closed-world assumption (CWA) 
+Despite the huge diversity to formulate constraints and validate them on RDF data, most of the constraint languages require a major shortcoming of redundancy. For example, consider the statement with an existential restriction \ms{Jedi $\sqsubseteq \exists$}\ms{hasJediWaepon.JediWeapon}  that says every Jedi has at least one Jedi weapon. Furthermore, we know that Luke is a Jedi (i.e., \ms{Jedi(Luke)}) having a blue laser sword (\ms{hasLaserSword(Luke, BlueLaserSword)}. 
+%Since classical constraint languages are based on the closed-world assumption (CWA) 
 %\er{"All constraint languages" has been changed to "classical" because notice that if we call OWL   a constraint language, statement does not hold.}, if a blue laser sword is not explicitly defined to be a Jedi weapon (\ms{JediWeapon(BlueLaserSword)}), the existential restriction causes a constraint violation.
-
 If we express the mentioned constraints in OWL %\er{\tiny \vspace{0.2cm}  But we already did in former paragraph via DL not OWL which would also confuse the reader, we can instead reformulate it here for the first time in OWL or DL,  or in former paragraph in parentheses "in DL:"}
 and apply a reasoner before the proper constraint validation is performed, we will not get a constraint violation because implicit statements like a blue laser sword is a Jedi weapon  (which corresponds to DL statement \ms{JediWeapon(BlueLaserSword)}) will be inferred. This is due to OWL's semantic basis; open-world assumption (OWA)  i.e., a statement cannot be inferred to be false if it cannot be proved to be true  which fits its primary design purpose: to represent knowledge on World Wide Web. With its open-world semantics, used as a constraint language, OWL seems to solve the redundancy problem.  However, on closer consideration, for many constraints as well as RDF validation scenarios which demands CWA, it can result inconvenience. 
 %At a first glance, using OWL as a constraint language, the shortcoming of redundancy is solved. However, on closer consideration, OWL is by default an insufficient choice because OWL is in contrast based on the open-world assumption (OWA), i.e. a statement cannot be inferred to be false on the basis of failures to prove it. 
@@ -297,7 +297,9 @@ $\mathcal{K}=\{$ & \ms{Person $\sqsubseteq \exists$ hasFather.Person}, \\
  &\ms{hasFather(Luke, Shmi)}$\}$
 \end{DL}
 \end{center}
-In case of the OWA, we infer that $\ms{Anakin}$ has a father that is a $\ms{Person}$, but we do not know who exactly, and $\mathcal{K}$ is consistent. In CWA however, the constraint needs to be satisfied only by named individuals which yields in return of a constraint violation. We can further observe that there is a clash caused by the functional role $\ms{hasAncestor}$ and the UNA. However, in OWA there is no UNA by default, therefore the reasoning will conclude that $\ms{Anakin}$ is the same individual as \ms{Shmi} ($\ms{Anakin} \equiv \ms{Shmi}$). Notice that this is not a problem if we add UNA to the OWA, like in the \textit{DL-Lite} family \cite{Calvanese2007,Artale2009} which is the basis for OWL 2 QL. %\er{Notice that this is the second example already, talking again OWA CWA in detail. I think all section must be designed in a way to show UNA and OWA vs. CWA in one example. Flows better and gains space}
+In case of the OWA, we infer that $\ms{Anakin}$ has a father that is a $\ms{Person}$, but we do not know who exactly, and $\mathcal{K}$ is consistent. In CWA however, the constraint needs to be satisfied only by named individuals which yields in return of a constraint violation. We can further observe that there is a clash caused by the functional role $\ms{hasAncestor}$ and the UNA. However, in OWA there is no UNA by default, therefore the reasoning will conclude that $\ms{Anakin}$ is the same individual as \ms{Shmi} ($\ms{Anakin} \equiv \ms{Shmi}$). Notice that this is not a problem if we add UNA to the OWA, like in the \textit{DL-Lite} family \cite{Calvanese2007,Artale2009} which is the basis for OWL 2 QL. 
+
+%\er{Notice that this is the second example already, talking again OWA CWA in detail. I think all section must be designed in a way to show UNA and OWA vs. CWA in one example. Flows better and gains space}
 
  If we follow the principle of adopting the UNA to OWL and performing constraint validation after some reasoning, the opposites of OWA in OWL and CWA in constraint validation does not affect each other, because missing assertions like in the example mentioned above will cause still some constraint violations but the implicit knowledge is even considered on constraint validation. 
 %\er{I think that such detailed explanations or long sentences like this should not be in motivation section.}
@@ -383,7 +385,6 @@ In case of the OWA, we infer that $\ms{Anakin}$ has a father that is a $\ms{Pers
 	%\item complete without reasoning | CW
 	%\item there is no query rewriting mechanism for OWL 2, just for OWL 2 QL
 %\end{itemize}
-
 In this paper, we explain why reasoning is beneficial for validation and how reasoning interacts with validation (\textbf{contribution 1}).
 We classify RDF constraints according to reasoning and complexity (\textbf{contribution 2}).
 We also investigate the expressivity of the five most promising constraint languages (\textbf{contribution 3}).
